--- a/database/TODO.txt
+++ b/database/TODO.txt
@@ -1,6 +1,8 @@
 
+0. Доделать сообщения - https://docs.google.com/document/d/13GSX0tnHnTP9KY9ePfCVxwt1RqYKGVuQFLiaWZYv130/edit
 1. Добавить пользователей чата
 2. Добавить атачменты к сообщению
+3. Сделать компании https://docs.google.com/document/d/13heNpREVAWuK3kHkhIzAUwdBbDx9E5A-IFf_5GmxQfE/edit
 
 Later:
 3. Написать скрипт наполения базы
