--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 
 Try:
+0. Iced + https://github.com/pop-os/cosmic-text-editor/
+Roadmap - https://whimsical.com/roadmap-iced-7vhq6R35Lp3TmYH4WeYwLM
+
 1. Dioxus - https://dioxuslabs.com/
 https://dioxuslabs.com/docs/0.3/guide/en/index.html
 
